# arc-hackathone

./: .env.example  Dockerfile  README.md  demo_runner.py  docker-compose.yml  nixpacks.toml  record_demo.js
.specify/memory/: constitution.md
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/agents/: base_agent.py  code_reviewer.py  content_writer.py  data_analyst.py  orchestrator.py  translator.py
backend/api/routes/: demo.py  tasks.py  transactions.py  wallets.py
backend/blockchain/: circle_wallets.py  nanopayments.py  x402.py
backend/db/: database.py  models.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
history/prompts/general/: 001-agentflow-hackathon-build.general.prompt.md  002-full-project-scan-summary.general.prompt.md  003-hackathon-requirements-audit-env-fix.general.prompt.md  004-gemini-function-calling-nanopayments-fix.general.prompt.md
specs/agentflow/: plan.md  spec.md  tasks.md
submission-assets/: cover.html  slides.html
