[project]
name = "agentflow-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "httpx==0.28.1",
    "google-generativeai==0.8.3",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "openai==1.58.1",
    "web3==7.6.0",
]
